# longer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  renovate.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__basic_calculation.snap  integration_tests__different_date_range.snap  integration_tests__event_before_start.snap  integration_tests__help_output.snap  integration_tests__invalid_event_date.snap  integration_tests__invalid_start_date.snap
