[package]
name = "longer"
version = "0.1.0"
edition = "2024"
description = "Calculate when you've done something longer than not"
license = "MIT"
repository = "https://github.com/ckoehler/longer"

[dependencies]
clap = { version = "4", features = ["derive", "suggestions", "color"] }
chrono = "0.4"
prettytable-rs = "0.10.0"

