[package]
name = "longer"
version = "0.3.0"
edition = "2024"
description = "Calculate when you've done something longer than not"
license = "MIT"
repository = "https://github.com/ckoehler/longer"

[dependencies]
clap = { version = "4", features = ["derive", "suggestions", "color"] }
chrono = "0.4"
prettytable-rs = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"

[package.metadata.release]
# Don't publish to crates.io automatically (we'll do that via GitHub Actions)
publish = false
# Custom tag message
tag-message = "Release {{version}}"

